--- a/mc/vc/index.html
+++ b/mc/vc/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Baxel: Home</title>
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" href="/images/favicon.ico" />
+  <style>
+    /* Hide the Ko-fi widget initially */
+    #kofi-widget-overlay {
+      display: none !important;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="hamburger" onclick="toggleSidebar()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <h1><a href="https://baxel.great-site.net">Baxel</a></h1>
+  </header>
+
+  <div id="overlay" onclick="closeSidebar()"></div>
+
+  <aside id="sidebar">
+    <button class="close-btn" onclick="closeSidebar()">×</button>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="https://m.twitch.tv/baxelorbaxel" target="_blank">Twitch <img src="/images/twitch-icon.png" class="arrow"></a> </li>
+      <li><a href="https://youtube.com/@baxelorbaxel" target="_blank">Youtube <img src="/images/youtube-icon.png" class="arrow"></a></li>
+      <li><a href="https://discord.gg/nG7uf8mmpg" target="_blank"> Discord Server <img src="/images/discord-icon.png" class="arrow"></a></li>
+      
+      <li class="expandable">
+        <a href="javascript:void(0)">Minecraft <img src="/images/arrow-icon.png" class="arrow"/></a>
+        <ul class="submenu">
+          <li><a href="/mc">How To Join</a></li>
+          <li><a href="#" >VC</a></li>
+          <li><a href="#" style="color: #B2BEB5;">Coming Soon...</a></li>
+        </ul>
+        <hr class="submenu-divider" />
+      </li>
+    </ul>
+    <ul>
+    <li><a href="https://discord.com/users/1343244701507260416" target="_blank"> Site Creator's Profile <img src="/images/discord-icon.png" class="arrow"></a></li>
+    <li><a href="https://ko-fi.com/darkflareplays8" target="_blank"> Ko-fi Page<img src="/images/ko-fi-icon.png" class="arrow"></a></li>
+    </ul>
+  </aside>
+
+  <main>
+    <h2>Minecraft Voice Chat</h2>
+    <p style="text-align: center;">Coming soon...</p>
+  </main>
+
+  <!-- Load Ko-fi widget ONCE -->
+  <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      kofiWidgetOverlay.draw('darkflareplays8', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Donate',
+        'floating-chat.donateButton.background-color': '#f45d22',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    });
+  </script>
+
+  <script>
+    function toggleSidebar() {
+      document.getElementById('sidebar').classList.add('active');
+      document.getElementById('overlay').style.display = 'block';
+
+      // Show the Ko-fi button
+      const kofi = document.getElementById('kofi-widget-overlay');
+      if (kofi) kofi.style.display = 'block';
+    }
+
+    function closeSidebar() {
+      document.getElementById('sidebar').classList.remove('active');
+      document.getElementById('overlay').style.display = 'none';
+
+      // Hide the Ko-fi button
+      const kofi = document.getElementById('kofi-widget-overlay');
+      if (kofi) kofi.style.display = 'none';
+    }
+
+    // Submenu toggle
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.expandable > a').forEach(link => {
+        link.addEventListener('click', e => {
+          e.preventDefault();
+          link.parentElement.classList.toggle('open');
+        });
+      });
+    });
+  </script>
+</body>
+</html>
 
