--- a/mc/index.html
+++ b/mc/index.html
@@ -20,7 +20,7 @@
       <span></span>
       <span></span>
     </div>
-    <h1><a href="https://baxel.great-site.net">Baxel</a></h1>
+    <h1><a href="https://baxel.pages.dev">Baxel</a></h1>
   </header>
 
   <div id="overlay" onclick="closeSidebar()"></div>
