--- a/mc/index.html
+++ b/mc/index.html
@@ -46,6 +46,7 @@
     <ul>
     <li><a href="https://discord.com/users/1343244701507260416" target="_blank"> Site Creator's Profile <img src="/images/discord-icon.png" class="arrow"></a></li>
     <li><a href="https://ko-fi.com/darkflareplays8" target="_blank" >Ko-fi Page<img src="/images/ko-fi-icon.png" class="arrow"></a></li>
+    <li><a href="https://github.com/oogisgod/baxel/tree/main" target="_blank">Site Source Code <img src="/images/github-icon.png" class="arrow"></a></li>
     </ul>
   </aside>
 
