--- a/mc/vc/index.html
+++ b/mc/vc/index.html
@@ -32,7 +32,7 @@
       <li><a href="https://m.twitch.tv/baxelorbaxel" target="_blank">Twitch <img src="/images/twitch-icon.png" class="arrow"></a> </li>
       <li><a href="https://youtube.com/@baxelorbaxel" target="_blank">Youtube <img src="/images/youtube-icon.png" class="arrow"></a></li>
       <li><a href="https://discord.gg/nG7uf8mmpg" target="_blank"> Discord Server <img src="/images/discord-icon.png" class="arrow"></a></li>
-      
+      <li><a href="/videos">YT Videos</a>
       <li class="expandable">
         <a href="javascript:void(0)">Minecraft <img src="/images/arrow-icon.png" class="arrow"/></a>
         <ul class="submenu">
