--- a/sidebar.html
+++ b/sidebar.html
@@ -6,6 +6,7 @@
     <li><a href="https://m.twitch.tv/baxelorbaxel" target="_blank">Twitch <img src="/images/twitch-icon.png" class="arrow"></a></li>
     <li><a href="https://youtube.com/@baxelorbaxel" target="_blank">YouTube <img src="/images/youtube-icon.png" class="arrow"></a></li>
     <li><a href="https://discord.gg/nG7uf8mmpg" target="_blank">Discord <img src="/images/discord-icon.png" class="arrow"></a></li>
+    <li><a href="/videos" target="_blank">Videos <img src="/images/youtube-icon.png" class="arrow"></a></li>
     <li class="expandable">
       <a href="javascript:void(0)">Minecraft <img src="/images/arrow-icon.png" class="arrow"/></a>
       <ul class="submenu">
