--- a/videos/index.html
+++ b/videos/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Baxel: Home</title>
+  <title>Baxel: YT Videos</title>
   <link rel="stylesheet" href="/style.css" />
   <link rel="icon" href="/images/favicon.ico" />
 </head>
