--- a/mc/index.html
+++ b/mc/index.html
@@ -22,7 +22,9 @@
 
   <main>
     <h2>How to join.</h2>
-    <p style="text-align: center;">Coming soon...</p>
+    <p style="text-align: center;">Java</p>
+    <img src="/images/java-join.mp4"> 
+  
   </main>
 
   <!-- Load Ko-fi widget ONCE -->
