--- a/mc/index.html
+++ b/mc/index.html
@@ -23,7 +23,10 @@
   <main>
     <h2>How to join.</h2>
     <p style="text-align: center;">Java</p>
-    <img src="/images/java-join.mp4"> 
+    <video width="640" height="360" controls>
+     <source src="/images/java-join.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+    </video>
   
   </main>
 
