--- a/mc/index.html
+++ b/mc/index.html
@@ -23,7 +23,7 @@
   <main>
     <h2>How to join.</h2>
     <p style="text-align: center;">Java</p>
-    <video width="640" height="360" controls>
+    <video width="640" height="360" controls style="display: block; margin: 0 auto;">
      <source src="/images/java-join.mp4" type="video/mp4">
      Your browser does not support the video tag.
     </video>
