--- a/mc/index.html
+++ b/mc/index.html
@@ -21,7 +21,7 @@
   <div id="sidebar-placeholder"></div>
 
   <main>
-    <h2>How to join.</h2>
+    <h2>How to Join</h2>
     <p style="text-align: center;">Java</p>
     <video width="640" height="360" controls style="display: block; margin: 0 auto;">
      <source src="/images/java-join.mp4" type="video/mp4">
