--- a/mc/index.html
+++ b/mc/index.html
@@ -22,12 +22,17 @@
 
   <main>
     <h2>How to Join</h2>
-    <p style="text-align: center;">Java</p>
+    <p style="text-align: center;"><b>Java</b></p>
     <video width="640" height="360" controls style="display: block; margin: 0 auto;">
      <source src="/images/java-join.mp4" type="video/mp4">
      Your browser does not support the video tag.
     </video>
-  
+    <ul>
+      <li>1. Launch java and press multiplayer,</li>
+      <li>2. Click add server,</li>
+      <li>3. In the ip box, put baxelmc.play.hosting,</li>
+      <li>4. Have fun!</li>
+    </ul>
   </main>
 
   <!-- Load Ko-fi widget ONCE -->
