--- a/sidebar.html
+++ b/sidebar.html
@@ -11,8 +11,8 @@
       <a href="javascript:void(0)">Minecraft <img src="/images/arrow-icon.png" class="arrow"/></a>
       <ul class="submenu">
         <li><a href="/mc">How To Join</a></li>
+        <li><a href="/mc/link">How to Link</a></li>
         <li><a href="/mc/vc">VC</a></li>
-        <li><a href="#" style="color: #B2BEB5;">Coming Soon...</a></li>
       </ul>
       <hr class="submenu-divider" />
     </li>
