--- a/mc/link/index.html
+++ b/mc/link/index.html
@@ -23,14 +23,13 @@
   <main>
     <h2>How to Link</h2>
     <video width="640" height="360" controls style="display: block; margin: 0 auto;">
-     <source src="/images/java-join.mp4" type="video/mp4">
+     <source src="/images/link-guide.mp4" type="video/mp4">
      Your browser does not support the video tag.
     </video>
     <ul>
-      <li>1. Launch java and press multiplayer,</li>
-      <li>2. Click add server,</li>
-      <li>3. In the ip box, put baxelmc.play.hosting,</li>
-      <li>4. Have fun!</li>
+      <li>1. In Minecraft run /discord link,</li>
+      <li>2. DM ONLY the 4 number code it gives you to @Baxel MC in discord,</li>
+      <li>3. You get linked!</li>
     </ul>
   </main>
 
