--- a/sidebar.html
+++ b/sidebar.html
@@ -12,6 +12,7 @@
       <ul class="submenu">
         <li><a href="/mc">How To Join</a></li>
         <li><a href="/mc/link">How to Link</a></li>
+        <li><a href="/mc/economy">Economy</a></li>
         <li><a href="/mc/vc">VC</a></li>
       </ul>
       <hr class="submenu-divider" />
