--- a/sidebar.html
+++ b/sidebar.html
@@ -14,7 +14,7 @@
         <li><a href="/mc/link">How to Link</a></li>
         <li><a href="/mc/economy">Economy</a></li>
         <li><a href="/mc/vc">VC</a></li>
-        <li><a href="/mc/openthisforactions&stuff.zip">Free Actions&Stuff</a></li>
+        <li><a href="/mc/openthisforactions&stuff.zip" target="_blank">Free Actions&Stuff</a></li>
       </ul>
       <hr class="submenu-divider" />
     </li>
